assets/css/main.css
/* ... */
		.box.post header {
			padding-top: 1em;
			margin: 0 0 2em 0;
		}

		.box.post h2 {
			font-size: 2.5em;
			letter-spacing: -0.015em;
		}

		.box.post header > p {
			margin-top: 1.25em;
			font-size: 1.25em;
		}

		.box footer ul.actions {
			margin-bottom: 0;
		}

/* Video */

.background-video {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	object-fit: cover;
	z-index: -1;
}

.portfolio-video {
	position: relative;
	width: 100%;
	height: auto;
}

/* Sidebar */
.sidebar {
	height: 100%;
	width: 0;
	position: fixed;
	top: 0;
	left: 0;
	background-color: #2c2c2c;
	overflow-x: hidden;
	transition: width 0.5s;
	padding-top: 60px;
}

.sidebar a {
	padding: 10px 15px;
	text-decoration: none;
	font-size: 25px;
	color: white;
	display: block;
	transition: width 0.3s ease-in-out;
}

.sidebar a:hover {
	background-color: #22776f;
}

.openbtn {
	position: fixed;
	top: 2rem;
	left: 2rem;
	background-color: #215654;
	border: none;
	padding: 0;
	border-radius: 5px;
	font-size: 20px;
	z-index: 1000;
	transition: background-color 0.3s ease-in-out;
	
	width: 4rem;
	height: 4rem;
	display: flex;
	align-items: center;
	justify-content: center;
}

.openbtn:hover {
	background-color: #53d9d4;
}

.hamburger {
	display: flex;
	flex-direction: column;
	gap: 5px;
	align-items: center;
	justify-content: center;
}


.hamburger div {
	width: 25px;
	height: 3px;
	background-color: white;
	border-radius: 2px;
	transition: all 0.3s ease-in-out;
}

.closebtn {
	position: absolute;
	top: 10px;
	right: 25px;
	font-size: 36px;
}
		
/* Button */

	input[type="button"],
	input[type="submit"],
	input[type="reset"],
	button,
	.button {
		-webkit-appearance: none;
		display: inline-block;
		text-decoration: none;
		cursor: pointer;
		border: 0;
		border-radius: 5px;
		background: #d52349;
		color: white !important;
		font-weight: 700;
		outline: 0;
		font-size: 1.1em;
		padding: 0.65em 1.5em 0.65em 1.5em;
		text-align: center;
		-moz-transition: background-color .25s ease-in-out;
		-webkit-transition: background-color .25s ease-in-out;
		-ms-transition: background-color .25s ease-in-out;
		transition: background-color .25s ease-in-out;
	}

		input[type="button"]:hover,
		input[type="submit"]:hover,
		input[type="reset"]:hover,
		button:hover,
		.button:hover {
			background: #e53359;
		}

		input[type="button"]:active,
		input[type="submit"]:active,
		input[type="reset"]:active,
		button:active,
		.button:active {
			background: #c51349;
		}

		input[type="button"].alt,
		input[type="submit"].alt,
		input[type="reset"].alt,
		button.alt,
		.button.alt {
			background: #252122;
		}

			input[type="button"].alt:hover,
			input[type="submit"].alt:hover,
			input[type="reset"].alt:hover,
			button.alt:hover,
			.button.alt:hover {
				background: #353132;
			}

			input[type="button"].alt:active,
			input[type="submit"].alt:active,
			input[type="reset"].alt:active,
			button.alt:active,
			.button.alt:active {
				background: #151112;
			}

		input[type="button"].icon:before,
		input[type="submit"].icon:before,
		input[type="reset"].icon:before,
		button.icon:before,
		.button.icon:before {
			opacity: 0.35;
			position: relative;
			top: 0.05em;
			margin-right: 0.75em;
		}

		input[type="button"].large,
		input[type="submit"].large,
		input[type="reset"].large,
		button.large,
		.button.large {
			font-size: 1.5em;
			padding: 0.75em 1.5em 0.75em 1.5em;
		}

/* Image */

	.image {
		display: inline-block;
		outline: 0;
	}

		.image img {
			display: block;
			width: 100%;
		}

		.image.centered {
			display: block;
			margin: 0 0 2em 0;
		}

			.image.centered img {
				margin: 0 auto;
				width: auto;
			}

		.image.featured {
			display: block;
			width: 100%;
			margin: 0 0 2em 0;
		}

		.image.left {
			float: left;
			margin: 0 2em 2em 0;
		}

/* List */

	ul {
		list-style: disc;
		padding-left: 1em;
	}

		ul li {
			padding-left: 0.5em;
		}

	ol {
		list-style: decimal;
		padding-left: 1.25em;
	}

		ol li {
			padding-left: 0.25em;
		}

/* Actions */

	ul.actions {
		list-style: none;
		padding-left: 0;
	}

		ul.actions li {
			display: inline-block;
			margin-left: 1em;
			padding-left: 0;
		}

			ul.actions li:first-child {
				margin-left: 0;
			}

/* Links */

	ul.links {
		list-style: none;
		padding-left: 0;
	}

		ul.links li {
			display: inline-block;
			border-left: solid 1px rgba(255, 255, 255, 0.05);
			padding: 0 0 0 1em;
			margin: 0 0 0 1em;
		}

			ul.links li:first-child {
				border-left: 0;
				padding-left: 0;
				margin-left: 0;
			}

/* Contact */

	ul.contact {
		list-style: none;
		padding-left: 0;
	}

		ul.contact li {
			position: relative;
			border-top: solid 1px #ddd;
			padding: 0.5em 0 0.5em 0;
		}

			ul.contact li h3 {
				position: absolute;
				left: 0;
				top: 1.3em;
				font-size: 1.1em;
			}

			ul.contact li p {
				color: white;
				margin: 0;
			}

			ul.contact li:first-child {
				padding-top: 0;
				border-top: 0;
			}

				ul.contact li:first-child h3 {
					top: 0;
				}

/* Divided */

	ul.divided {
		list-style: none;
		padding-left: 0;
	}

		ul.divided li {
			border-top: solid 1px #ddd;
			padding: 1em 0 1em 0;
		}

			ul.divided li:first-child {
				border-top: 0;
				padding-top: 0;
			}

/* Social */

	ul.social {
		list-style: none;
		padding-left: 0;
		overflow: hidden;
		cursor: default;
		margin: 0 0 3.25em 0;
		text-align: center;
	}

		ul.social li {
			display: inline-block;
			padding-left: 0;
			margin-left: 1.5em;
		}

			ul.social li:first-child {
				margin-left: 0;
			}

			ul.social li a {
				display: grid;
				width: 3em;
				height: 3em;
				font-size: 1.5em;
				text-align: center;
				border-radius: 5px;
				background: #888;
				-moz-transition: background-color .25s ease-in-out;
				-webkit-transition: background-color .25s ease-in-out;
				-ms-transition: background-color .25s ease-in-out;
				transition: background-color .25s ease-in-out;
			}
/* ... */

